<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/empty_preview"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_marginHorizontal="@dimen/size_4"
        android:layout_marginVertical="@dimen/size_4"
        android:contentDescription="@string/empty_image"
        android:src="@drawable/empty_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/empty_list_title" />

    <TextView
        android:id="@+id/empty_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_2"
        android:layout_marginHorizontal="@dimen/size_2"
        android:gravity="center"
        android:text="@string/empty_vehicle_list_subtitle" />

</LinearLayout>