<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/Theme.VehicleProfile.AppBarOverlay"
        app:expanded="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="48sp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <TextView
                android:id="@+id/vehicle_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/size_4"
                android:layout_marginVertical="@dimen/size_2"
                android:layout_marginTop="@dimen/size_1"
                android:textAllCaps="true"
                app:layout_collapseMode="pin"
                tools:text="MH12Pn7781" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.VehicleProfile.PopupOverlay"
                app:titleTextAppearance="@style/ToolbarTextAppearance"
                tools:title="Civic Petrol" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vehicle_detail_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/make_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4"
            android:text="@string/make_label"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/make_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_label"
            tools:text="Honda" />

        <TextView
            android:id="@+id/model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_label"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/make_label" />

        <TextView
            android:id="@+id/model_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/make_label"
            tools:text="Civic" />

        <TextView
            android:id="@+id/fuel_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4"
            android:text="@string/fuel_type_label"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/make_value" />

        <TextView
            android:id="@+id/fuel_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fuel_type_label"
            tools:text="Petrol" />

        <TextView
            android:id="@+id/transmission_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transmission_label"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/fuel_type_label" />

        <TextView
            android:id="@+id/transmission_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/transmission_label"
            tools:text="Automatic" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading_section"
        layout="@layout/loading_section"
        android:visibility="gone" />

    <include
        android:id="@+id/error_section"
        layout="@layout/error_section"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>